# robotFarm

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: AtlasExternalProject.cmake  BoostExternalProject.cmake  CapnprotoExternalProject.cmake  CerealExternalProject.cmake  CeresSolverExternalProject.cmake  Eigen3ExternalProject.cmake  EigenExternalProject.cmake  FlatBuffersExternalProject.cmake  GFlagsExternalProject.cmake  GlogExternalProject.cmake  GoogleTestExternalProject.cmake  NlohmannJsonExternalProject.cmake  OatppExternalProject.cmake  OatppWebSocketExternalProject.cmake  OgreExternalProject.cmake  OpenCVExternalProject.cmake  ProtobufExternalProject.cmake  Python3ExternalProject.cmake  PythonExternalProject.cmake  SpdLogExternalProject.cmake  SuiteSparseExternalProject.cmake  VTKExternalProject.cmake
docker/: CMakeLists.txt  robotFarm-ubuntu-18.04.dockerfile  robotFarm-ubuntu-22.04.dockerfile  robotFarm-ubuntu.dockerfile
scripts/: extractDependencies.sh  installAtlasDependencies.sh  installBoostDependencies.sh  installBuildTools.sh  installCeresDependencies.sh  installOgreDependencies.sh  installOpenCVDependencies.sh  installProtobufDependencies.sh  installPython3Dependencies.sh  installSuiteSparseDependencies.sh  installSystemDependencies.sh  installVTKDependencies.sh  systemDependencies.json
scripts/archive/: installBuildTools.sh  installOpenCVDependencies.sh  installPython3Dependencies.sh  installVTKDependencies.sh
toolchains/: clang-12.cmake  clang-14.cmake  gnu-10.cmake  gnu-12.cmake
